After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698585 - "Set as Background" on Alt-DnD menu is mostly useless
"Set as Background" on Alt-DnD menu is mostly useless
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.8.x
Other Linux
: Normal minor
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-22 15:38 UTC by António Fernandes
Modified: 2014-02-17 22:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description António Fernandes 2013-04-22 15:38:22 UTC
Steps to reproduce:

     Drag and drop an item while holding the Alt key.

Result:

     This menu pops up:
     +-------------------+
     | Move Here         |
     | Copy Here         |
     | Link Here         |
     | Set as Background |
     | ----------------- |
     | Cancel            |
     +-------------------+

The "Set as Background" is always there, even though it is only ever sensitive if 1) the dragged item is an image file, and 2) the drop target is the Desktop, and 3) the Desktop folder feature is enabled (which is not default).

Since 3.6, nautilus has got a "Set as Wallpaper" action directly in the context menu for image files.

I think the "Set as Background" option from Alt-DnD menu deserves to be removed.
Comment 1 Cosimo Cecchi 2014-02-17 22:53:03 UTC
Completely agreed - I removed that in git master now.