dnd: remove "Set as Background" action on drop

We already have a context menu action these days.

https://bugzilla.gnome.org/show_bug.cgi?id=698585